<resources>
    <string name="app_name">Blackjack</string>

    <string name="about_game">This app is a light version of the card game Blackjack. In this app the player will only play against the dealer. </string>
    <string name="about_devs">Designed by Caleb M. and Jessica M. students of APSU\'s computer science degree program.</string>
    <string name="credit">Credit for images found in this application go to: www.freeiconspng.com  </string>

    <string name="title">BlackJack</string>
    <string name="twenty_one">Twenty One</string>

    <string name="how_btn">How To Play</string>
    <string name="play_btn">Deal Me In</string>
    <string name="about_btn">About</string>

    <string name="playerWins">Player Wins!</string>
    <string name="dealerWins">Dealer Wins!</string>
    <string name="deck">Deck</string>
    <string name="card1">Deck Card 1</string>
    <string name="card2">Deck Card 2</string>

    <string name="d_1st">dealer\'s 1st card</string>
    <string name="d_2nd">dealer\'s 2nd card</string>
    <string name="p_1st">player\'s 1st card</string>
    <string name="p_2nd">player\'s 2nd card</string>

    <string name="hit">Hit</string>
    <string name="stay">Stay</string>
    <string name="deal">Deal</string>

    <string name="d_1st_hit">dealer\'s 1st hit</string>
    <string name="d_2nd_hit">dealer\'s 2nd hit</string>
    <string name="d_3rd_hit">dealer\'s 3rd hit</string>
    <string name="d_4th_hit">dealer\'s 4th hit</string>
    <string name="d_5th_hit">dealer\'s 5th hit</string>

    <string name="p_1st_hit">player\'s 1st hit</string>
    <string name="p_2nd_hit">player\'s 2nd hit</string>
    <string name="p_3rd_hit">player\'s 3rd hit</string>
    <string name="p_4th_hit">player\'s 4th hit</string>
    <string name="p_5th_hit">player\'s 5th hit</string>


</resources>
